--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "bootstrap": "^5.1.3",
     "openai": "^2.0.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
+    "typescript": "^4.6.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
