--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "reactstrap": "^9.0.1",
     "typescript": "^4.6.3",
