--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^17.0.24",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.10",
