fix typos and server

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "server" : "cd server && nodemon index.ts",
     "dev" : "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "dev:server": "cd client && yarn build && cd .. && cd server && yarn start",
-    "start": "cd server && nodemon index.ts && cd .. && cd client && yarn start",
+    "start": "cd server && nodemon index.ts",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   }
 }
