--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "ts-node": "^10.7.0"
   },
   "scripts": {
-    "client" : "cd client && yarn install && yarn start",
+    "client" : "cd client && yarn start",
     "server" : "cd server && nodemon index.ts",
     "dev" : "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "dev:server": "cd client && yarn build && cd .. && cd server && yarn start",
     "start": "cd server && nodemon index.ts",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd client && yarn install && yarn build"
   }
 }
