--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.17.3",
     "node": "^17.7.2",
     "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "scripts": {
     "client": "cd client && yarn start",
